# EasternTalesShelf

./: .gitignore  BATO_RATE_LIMITING.md  BATO_REFACTORING_SUMMARY.md  BATO_SYSTEM_COMPONENTS.md  Dockerfile  LOGGING_README.md  OAUTH_SETUP.md  README.md  anilist_db.db  beta_installer.py  check_bato_logs.py  code.html  docker-compose.yml  example_showcase.html  install_requirements.py  installer.py  installer_gui_elements.py  migrate_mangaupdates_urls.py  migrate_users_table.py  pyproject.toml  requirements.in  requirements.txt  run_app.bat  run_app.ps1  take_full_manga_list_sqllite_tkinter.py  tech_stack.md  testing_directus.py  testking_grqphapi.py  user_color_settings_3.json  user_color_settings_default.json
.cursor/rules/: ask-mode.mdc
.github/workflows/: container_building.yml  deploy_changes.yml  ssh_to_vps.yml
app/: admin.py  app.py  background_tasks.py  config.py  count_lines.py  download_covers.py  oauth_config.py  oauth_handler.py  tkinter_setup.py
app/blueprints/: __init__.py  api.py  auth.py  bato_admin.py  bato_notifications.py  download.py  extension.py  graphql.py  main.py  manga.py  notifications.py  webhook.py
app/database_module/: Dockerfile  bato_repository.py  docker-compose.yml  requirements.txt
app/functions/: class_mangalist.py  manga_updates_fns.py  manga_updates_spider.py  sqlalchemy_fns.py  sqlalchemy_fns_mariadb.py
app/migrations/: add_is_emitted_to_bato_notifications.py  create_bato_tables_mariadb.py  populate_bato_initial_data.py
app/models/: bato_models.py  scraper_models.py
app/repositories/: __init__.py
app/routes/: __init__.py  api.js
(+103 files in other folders)
