[tool.poetry]
name = "easterntalesshelf"
version = "1.0"
description = "Easter manga and novels library"
authors = ["Madrus <67657497+ShiroePL@users.noreply.github.com>"]
license = "MIT license"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10.6"
annotated-types = "*"
anyio = "*"
attrs = "*"
automat = "*"
beautifulsoup4 = "*"
blinker = "*"
certifi = "*"
cffi = "*"
charset-normalizer = "*"
click = "*"
colorama = "*"
constantly = "*"
cryptography = "*"
cssselect = "*"
defusedxml = "*"
distro = "*"
exceptiongroup = "*"
filelock = "*"
flask = "*"
flask-login = "*"
flask-sqlalchemy = "*"
greenlet = "*"
gunicorn = "*"
h11 = "*"
httpcore = "*"
httpx = "*"
hyperlink = "*"
idna = "*"
importlib-metadata = "*"
incremental = "*"
itemadapter = "*"
itemloaders = "*"
itsdangerous = "*"
jinja2 = "*"
jmespath = "*"
lxml = "*"
markupsafe = "*"
mysql-connector-python = "*"
openai = "*"
packaging = "*"
parsel = "*"
pillow = "*"
protego = "*"
pyasn1 = "*"
pyasn1-modules = "*"
pycparser = "*"
pydantic = "*"
pydantic-core = "*"
pydispatcher = "*"
pymysql = "*"
pyopenssl = "*"
queuelib = "*"
requests = "*"
requests-file = "*"
scrapy = "*"
service-identity = "*"
sniffio = "*"
soupsieve = "*"
sqlalchemy = "*"
tldextract = "*"
tomli = "*"
tqdm = "*"
twisted = "*"
typing-extensions = "*"
urllib3 = "*"
w3lib = "*"
werkzeug = "*"
zipp = "*"
zope-interface = "*"
crochet = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
